--- a/bloggies/templates/navigation.html
+++ b/bloggies/templates/navigation.html
@@ -14,7 +14,7 @@
 		<!-- Centered Menu Links -->
 		<div class="collapse navbar-collapse justify-content-center" id="navbarNav">
 			<ul class="navbar-nav">
-				<li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+				<li class="nav-item"><a class="nav-link" href="{% url 'dashboard' %}">Home</a></li>
 				<li class="nav-item"><a class="nav-link" href="#">Features</a></li>
 				<li class="nav-item"><a class="nav-link" href="#">Pricing</a></li>
 				<li class="nav-item"><a class="nav-link" href="{% url 'users:signup' %}">Sign Up</a></li>
