--- a/apps/blogs/templates/blogs/index.html
+++ b/apps/blogs/templates/blogs/index.html
@@ -72,4 +72,20 @@
 </div>
 {% endif %}
 
+{% for post in posts %}
+<div class="container d-flex justify-content-center">
+	<div class="card w-75 mb-3">
+		<div class="card-body">
+			<h5 class="card-title">{{ post.title }}</h5>
+			<p class="card-text">{{ post.content|truncatechars:150 }}</p>
+			<a href="#" class="btn btn-primary">See article</a>
+		</div>
+	</div>
+</div>
+
+{% endfor %}
+
+
+
+
 {% endblock content %}
