--- a/apps/blogs/templates/blogs/index.html
+++ b/apps/blogs/templates/blogs/index.html
@@ -62,6 +62,7 @@
 
 
 </header>
+
 {% endblock header %}
 
 {% block content %}
@@ -78,7 +79,7 @@
 		<div class="card-body">
 			<h5 class="card-title">{{ post.title }}</h5>
 			<p class="card-text">{{ post.content|truncatechars:150 }}</p>
-			<a href="#" class="btn btn-primary">See article</a>
+			<a href="{% url 'blogs:post_detail' post.slug %}" class="btn btn-primary">See article</a>
 		</div>
 	</div>
 </div>
