--- a/apps/blogs/templates/blogs/index.html
+++ b/apps/blogs/templates/blogs/index.html
@@ -77,9 +77,17 @@
 <div class="container d-flex justify-content-center">
 	<div class="card w-75 mb-3">
 		<div class="card-body">
-			<h5 class="card-title">{{ post.title }}</h5>
+			<div class="d-flex justify-content-between align-items-center mb-3">
+				<h5 class="card-title mb-0">{{ post.title }}</h5>
+				{% if user_authenticated %}
+				<button type="button" class="btn btn-outline-danger">Delete post</button>
+				{% endif %}
+			</div>
 			<p class="card-text">{{ post.content|truncatechars:150 }}</p>
-			<a href="{% url 'blogs:post_detail' post.slug %}" class="btn btn-primary">See article</a>
+			<div class="d-flex justify-content-between align-items-end">
+				<a href="{% url 'blogs:post_detail' post.slug %}" class="btn btn-primary">See article</a>
+				<p class="card-text"><small class="text-body-secondary">{{ post.created_at|date:"F j, Y" }}</small></p>
+			</div>
 		</div>
 	</div>
 </div>
