--- a/bloggies/templates/navigation.html
+++ b/bloggies/templates/navigation.html
@@ -1,29 +1,9 @@
-<nav class="navbar navbar-expand-md navbar-light bg-light">
-	<div class="container">
-		<!-- Logo -->
-		<a class="navbar-brand" href="/">
-			<img src="https://via.placeholder.com/40" alt="Logo" class="d-inline-block align-text-top">
-			Bloggies
-		</a>
-
-		<!-- Navbar Toggler (for mobile view) -->
-		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-
-		<!-- Centered Menu Links -->
-		<div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-			<ul class="navbar-nav">
-				<li class="nav-item"><a class="nav-link" href="{% url 'dashboard' %}">Home</a></li>
-				<li class="nav-item"><a class="nav-link" href="#">Features</a></li>
-				<li class="nav-item"><a class="nav-link" href="#">Pricing</a></li>
-				<li class="nav-item"><a class="nav-link" href="{% url 'users:signup' %}">Sign Up</a></li>
-			</ul>
-		</div>
-
-		<!-- Log In Button (Right Aligned) -->
-		<div class="d-flex">
-			<a href="{% url 'users:login' %}" class="btn btn-primary">Log in</a>
+<nav class="navbar navbar-light">
+	<div class="container d-flex justify-content-between">
+		<a class="navbar-brand" href="/">MultiBlog</a>
+		<div>
+			<a href="{% url 'users:login' %}" class="btn btn-outline-secondary me-2">Login</a>
+			<a href="{% url 'users:signup' %}" class="btn btn-primary">Let’s Blog!</a>
 		</div>
 	</div>
 </nav>
