--- a/apps/users/templates/users/login.html
+++ b/apps/users/templates/users/login.html
@@ -3,67 +3,66 @@
 {% load i18n %}
 {% load form_filters %}
 
-{% block title %}
-{% trans "Login" %}
-{% endblock title %}
+{% block title %}{% trans "Log in" %}{% endblock title %}
 
-{% block description %}
-{% trans "" %}
-{% endblock description %}
-
-{% block scripts %}
-<script>
-
-    let loginUrl = "{% url 'users:login' %}";
-
-</script>
-
-<script src="{% static 'js/login.js' %}" defer></script>
-
-{% endblock scripts %}
+{% block css %}
+<link rel="stylesheet" href="{% static 'style/css/main.css' %}">
+<link rel="stylesheet" href="{% static 'style/css/navbar.css' %}">
+<link rel="stylesheet" href="{% static 'style/css/btn.css' %}">
+<link rel="stylesheet" href="{% static 'style/css/login.css' %}">
+{% endblock css %}
 
 {% block header %}
-
-    {% include 'navigation.html' %}
-
+{% include 'navigation.html' %}
 {% endblock header %}
 
 {% block content %}
+<div class="login-wrapper">
+	<div class="login-card">
+		<h2>Welcome Back 👋</h2>
 
-    <div class="container">
-        <h2 class="text-center">Login</h2>
-        <form method="post" id="login-form">
-            {% csrf_token %}
-            {{ form.errors }}
-            <div class="form-floating mb-3">
-                {{ form.username|add_class_if_error:"is-invalid" }}
-                <label for="{{ form.username.id_for_label }}">Username</label>
-                {% if form.username.errors %}
-                    <div class="invalid-feedback">{{ form.username.errors.0 }}</div>
-                {% endif %}
-            </div>
+		<form method="post" novalidate>
+			{% csrf_token %}
 
-            <div class="form-floating mb-3">
-                {{ form.password|add_class_if_error:"is-invalid" }}
-                <label for="{{ form.password.id_for_label }}">Password</label>
-                {% if form.password.errors %}
-                    <div class="invalid-feedback">{{ form.password.errors.0 }}</div>
-                {% endif %}
-            </div>
+			{% if form.non_field_errors %}
+			<div class="alert alert-danger">{{ form.non_field_errors.0 }}</div>
+			{% endif %}
 
-            {% if form.errors %}
+			<div class="form-floating mb-3">
 
-                {% for field, errors in form.errors.items %}
-                    {% for error in errors %}
-                        <div class="invalid-feedback">{{ error }}</div>
-                    {% endfor %}
-                {% endfor %}
+				{{ form.username|add_class_if_error:"is-invalid" }}
+				<label for="{{ form.username.id_for_label }}">Username or Email</label>
 
-            {% endif %}
+				{% if form.username.errors %}
+				<div class="invalid-feedback">{{ form.username.errors.0 }}</div>
+				{% endif %}
 
-            <button type="submit" class="btn btn-primary">Sign Up</button>
-        </form>
+			</div>
 
-    </div>
+			<div class="form-floating mb-3">
 
+				{{ form.password|add_class_if_error:"is-invalid" }}
+				<label for="{{ form.password.id_for_label }}">Password</label>
+
+				{% if form.password.errors %}
+				<div class="invalid-feedback">{{ form.password.errors.0 }}</div>
+				{% endif %}
+
+			</div>
+
+			<div class="d-grid">
+				<button type="submit" class="btn btn-primary btn-login">Log In</button>
+			</div>
+		</form>
+
+		<div class="form-footer">
+			<p>
+				Forgot your password?
+				<a href="#">Reset it here</a><br>
+				Don’t have an account?
+				<a href="{% url 'users:signup' %}">Create one</a>
+			</p>
+		</div>
+	</div>
+</div>
 {% endblock content %}
