--- a/apps/users/templates/users/dashboard.html
+++ b/apps/users/templates/users/dashboard.html
@@ -13,6 +13,7 @@
 {% block css %}
 <link rel="stylesheet" href="{% static 'style/css/main.css' %}">
 <link rel="stylesheet" href="{% static 'style/css/dashboard.css' %}">
+<link rel="stylesheet" href="{% static 'style/css/navbar.css' %}">
 <link rel="stylesheet" href="{% static 'style/css/btn.css' %}">
 {% endblock css %}
 
@@ -70,14 +71,17 @@
         <div id="blogPreviewCarousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner shadow">
                 <div class="carousel-item active">
-                    <img src="https://source.unsplash.com/1200x500/?minimal,blog" class="d-block w-100" alt="Preview 1">
+                    <img src="https://plus.unsplash.com/premium_photo-1705734976389-448185d73070?q=80&w=2664&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                         class="d-block w-100" alt="Preview 1">
                 </div>
                 <div class="carousel-item">
-                    <img src="https://source.unsplash.com/1200x500/?writing,journal" class="d-block w-100"
+                    <img src="https://images.unsplash.com/photo-1566458383719-239ca2d59a37?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                         class="d-block w-100"
                          alt="Preview 2">
                 </div>
                 <div class="carousel-item">
-                    <img src="https://source.unsplash.com/1200x500/?design,blog" class="d-block w-100" alt="Preview 3">
+                    <img src="https://images.unsplash.com/photo-1457369804613-52c61a468e7d?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                         class="d-block w-100" alt="Preview 3">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#blogPreviewCarousel"
@@ -172,7 +176,7 @@
     <div class="container">
         <h2>Let’s Get Your Blog Online Today</h2>
         <p>It’s free, friendly, and ready for your words.</p>
-        <a href="/signup" class="btn btn-primary btn-lg">Start Blogging</a>
+        <a href="{% url 'users:signup' %}" class="btn btn-primary btn-lg">Start Blogging</a>
     </div>
 </section>
 
