--- a/apps/users/templates/users/login.html
+++ b/apps/users/templates/users/login.html
@@ -12,6 +12,17 @@
 <link rel="stylesheet" href="{% static 'style/css/login.css' %}">
 {% endblock css %}
 
+{% block scripts %}
+<script>
+
+	let loginUrl = "{% url 'users:login' %}";
+
+</script>
+
+<script src="{% static 'js/login.js' %}" defer></script>
+
+{% endblock scripts %}
+
 {% block header %}
 {% include 'navigation.html' %}
 {% endblock header %}
@@ -21,7 +32,7 @@
 	<div class="login-card">
 		<h2>Welcome Back 👋</h2>
 
-		<form method="post" novalidate>
+		<form id="login-form" method="post">
 			{% csrf_token %}
 
 			{% if form.non_field_errors %}
