--- a/apps/blogs/templates/blogs/index.html
+++ b/apps/blogs/templates/blogs/index.html
@@ -12,6 +12,28 @@
 
 {% block css %}
 <link rel="stylesheet" href="{% static 'style/css/blog.css' %}">
+<link rel="stylesheet" href="{% static 'style/css/navbar.css' %}">
+<link rel="stylesheet" href="{% static 'style/css/navbar-admin.css' %}">
+
+<!-- Personalized style -->
+<style>
+    body {
+        background-color: {{ site_settings.background_color }} !important;
+    }
+
+    .hero {
+        background: url({{ site_settings.hero_image_url|safe }}) center center / cover no-repeat !important;
+        font-family: {{ site_settings.heading_font_family }}
+    }
+
+    .post-card {
+        border-left: 6px solid {{site_settings.card_border_color}};
+        background-color: {{site_settings.card_background_color}};
+    }
+
+
+</style>
+
 {% endblock css %}
 
 {% block scripts %}
@@ -25,10 +47,7 @@
     <div class="container-fluid justify-content-end">
         <ul class="nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Edit Hero</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Settings</a>
+                <a class="nav-link" href="{% url 'site_config:site_settings_update' 1 %}">Settings</a>
             </li>
             <form method="post" action="{% url 'blogs:logout' %}">
                 {% csrf_token %}
@@ -50,8 +69,8 @@
 <!-- Hero -->
 <header class="hero">
     <div class="hero-content">
-        <h1>John Doe's Blog</h1>
-        <p>Thoughts, stories, and ideas from a full-stack dev who loves building & sharing.</p>
+        <h1>{{ site_settings.blog_name }}</h1>
+        <p>{{ site_settings.subtitle }}</p>
     </div>
 </header>
 
