--- a/apps/blogs/templates/blogs/post_form.html
+++ b/apps/blogs/templates/blogs/post_form.html
@@ -27,7 +27,7 @@
 			<li class="nav-item">
 				<a class="nav-link" href="{% url 'blogs:tenant_index' %}">Go back</a>
 			</li>
-			<form method="post" action="{% url 'blogs:logout' %}">
+			<form method="post" action="{% url 'users:logout' %}">
 				{% csrf_token %}
 				<button class="btn btn-primary" type="submit">Log out</button>
 			</form>
