--- a/apps/site_config/templates/site_config/site_settings_form.html
+++ b/apps/site_config/templates/site_config/site_settings_form.html
@@ -13,7 +13,7 @@
 
 {% block header %}
 
-{% if user_authenticated %}
+{% if request.tenant_is_authenticated %}
 <nav class="navbar admin-nav">
 	<div class="container-fluid justify-content-end">
 		<ul class="nav">
@@ -32,7 +32,7 @@
 {% endblock header %}
 
 {% block content %}
-{% if user_authenticated %}
+{% if request.tenant_is_authenticated %}
 
 <div class="container py-5">
 	<div class="row justify-content-center">
