--- a/apps/blogs/templates/blogs/post_form.html
+++ b/apps/blogs/templates/blogs/post_form.html
@@ -68,13 +68,12 @@
 			<trix-editor input="id_content"></trix-editor>
 
 			<div class="mt-4 text-end">
-				<button type="submit" class="btn btn-primary btn-submit">Publish</button>
+				<button type="submit" class="btn btn-secondary btn-submit" name="action" value="draft">Save as draft
+				</button>
+				<button type="submit" class="btn btn-primary btn-submit" name="action" value="publish">Publish</button>
 			</div>
 		</form>
 	</div>
 </div>
-{% else %}
-
-
 {% endif %}
 {% endblock content %}
