--- a/bloggies/static/style/css/post-create.css
+++ b/bloggies/static/style/css/post-create.css
@@ -35,12 +35,10 @@ trix-editor:focus {
 }
 
 .btn-submit {
-	background-color: #6c63ff;
-	border-color: #6c63ff;
 	padding: 0.6rem 2rem;
 	border-radius: 8px;
 }
 
 .btn-submit:hover {
-	background-color: #5952e2;
+	filter: brightness(95%);
 }
