--- a/apps/users/templates/users/login.html
+++ b/apps/users/templates/users/login.html
@@ -82,7 +82,7 @@
 		<div class="form-footer">
 			<p>
 				Forgot your password?
-				<a href="#">Reset it here</a><br>
+				<a href="{% url 'users:password_reset' %}">Reset it here</a><br>
 				Don’t have an account?
 				<a href="{% url 'users:signup' %}">Create one</a>
 			</p>
